--- a/.github/workflows/push_package_changes.yml
+++ b/.github/workflows/push_package_changes.yml
@@ -53,6 +53,6 @@ jobs:
       # Run `publish_packages` script
       - name: Run `publish_packages` script
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.REPO_GITHUB_TOKEN }}
         run: |
           node lib/node_modules/@stdlib/_tools/scripts/publish_packages.js
