Set timeout for installing dependencies

--- a/.github/workflows/push_package_changes.yml
+++ b/.github/workflows/push_package_changes.yml
@@ -49,6 +49,7 @@ jobs:
       - name: Install dependencies
         run: |
           npm install
+        timeout-minutes: 15
 
       # Run `publish_packages` script
       - name: Run `publish_packages` script
