Try installing additional packages

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,8 +85,8 @@ jobs:
 
     # Define the sequence of job steps...
     steps:
-      # Install system packages:
-      - name: 'Install system packages'
+      # Install compilers:
+      - name: 'Install compilers'
         shell: bash
         run: |
           if [[ ${{ matrix.PLATFORM }} = "linux" ]]; then
@@ -104,6 +104,17 @@ jobs:
           fi
         timeout-minutes: 10
 
+      # Configure a virtual display server (needed for electron):
+      - name: 'Configure virtual display server (Linux)'
+        shell: bash
+        run: |
+          if [[ ${{ matrix.PLATFORM }} = "linux" ]]; then
+            sudo apt-get install -y xvfb libxkbcommon-x11-0 libxcb-icccm4 libxcb-image0 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 libxcb-xinerama0 libxcb-xinput0 libxcb-xfixes0
+            # Start xvfb on (default) display :0
+            sudo /usr/bin/Xvfb :0 -screen 0 1280x1024x24 > /dev/null 2>&1 &
+          fi
+        timeout-minutes: 10
+
       # Set environment variables:
       - name: 'Set environment variables'
         shell: bash
@@ -117,16 +128,6 @@ jobs:
           echo "LINKER=g++" >> $GITHUB_ENV
           echo "GITHUB=true" >> $GITHUB_ENV
         timeout-minutes: 1
-
-      # Configure the virtual display server (needed for electron):
-      - name: 'Configure virtual display server'
-        shell: bash
-        run: |
-          if [[ ${{ matrix.PLATFORM }} = "linux" ]]; then
-            echo "DISPLAY=':0'" >> $GITHUB_ENV
-            Xvfb "${{ env.DISPLAY }}" -screen 0 1024x768x24 > /dev/null 2>&1 &
-          fi
-        timeout-minutes: 2
 
       # Install Node.js:
       - name: 'Install Node.js'
