Try quoting display

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,7 +111,7 @@ jobs:
           if [[ ${{ matrix.PLATFORM }} = "linux" ]]; then
             sudo apt-get install -y xvfb libxkbcommon-x11-0 libxcb-icccm4 libxcb-image0 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 libxcb-xinerama0 libxcb-xinput0 libxcb-xfixes0
             # Start xvfb on (default) display :0
-            sudo /usr/bin/Xvfb :0 -screen 0 1280x1024x24 > /dev/null 2>&1 &
+            sudo /usr/bin/Xvfb ':0' -screen 0 1280x768x24 > /dev/null 2>&1 &
           fi
         timeout-minutes: 10
 
