--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,6 @@ on:
   push:
     branches:
       - develop
-      - master
 
 # Workflow jobs:
 jobs:
@@ -52,18 +51,18 @@ jobs:
 
     # Define the build matrix strategy...
     strategy:
+
       # Specify whether to cancel all in-progress jobs if any matrix job fails:
       fail-fast: false
 
       # Define the build matrix:
       matrix:
+
         # Define the list of build tasks:
-        # BUILD_TASK: ['test-npm-install', 'test', 'benchmark', 'examples', 'test-coverage']
-        BUILD_TASK: ['test-npm-install', 'test', 'benchmark', 'examples']
+        BUILD_TASK: []
 
         # Define the list of Node.js versions on which to run this job:
-        # NODE_VERSION: ['16', '14', '12', '10', '8', '6', '4', '0.12', '0.10']
-        NODE_VERSION: ['16']
+        NODE_VERSION: ['16', '14', '12', '10', '8', '6', '4', '0.12', '0.10']
 
         # Define the list of operating systems on which to run this job:
         OS: ['ubuntu-latest', 'macOS-latest']
@@ -105,6 +104,7 @@ jobs:
 
     # Define the sequence of job steps...
     steps:
+
       # Install compilers:
       - name: 'Install compilers'
         shell: bash
