--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -1,7 +1,7 @@
 #/
 # @license Apache-2.0
 #
-# Copyright (c) 2019 The Stdlib Authors.
+# Copyright (c) 2021 The Stdlib Authors.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -17,25 +17,30 @@
 #/
 
 # Workflow name:
-name: CI
+name: benchmark
 
 # Workflow triggers:
 on:
-  push:
-    branches:
-      - develop
+  workflow_run:
+    workflows:
+      - test
+    types:
+      - completed
 
 # Workflow jobs:
 jobs:
 
-  # Define a workflow for running continuous integration (CI) build tasks on Linux and MacOS...
-  ci_linux_macos:
+  # Define a workflow for running benchmarks...
+  on-success:
 
     # Define a display name:
     name: "${{ matrix.BUILD_TASK }}: NODE_VERSION=${{ matrix.NODE_VERSION }}, OS=${{ matrix.OS }}"
 
     # Define the type of virtual host machine on which to run the job:
     runs-on: ${{ matrix.OS }}
+
+    # Ensure that this job only runs if the antecedent workflow is successful:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
     # Define environment variables:
     env:
@@ -59,10 +64,10 @@ jobs:
       matrix:
 
         # Define the list of build tasks:
-        BUILD_TASK: []
+        BUILD_TASK: ['benchmark']
 
         # Define the list of Node.js versions on which to run this job:
-        NODE_VERSION: ['16', '14', '12', '10', '8', '6', '4', '0.12', '0.10']
+        NODE_VERSION: ['16', '14', '12']
 
         # Define the list of operating systems on which to run this job:
         OS: ['ubuntu-latest', 'macOS-latest']
@@ -78,11 +83,11 @@ jobs:
           - NODE_VERSION: '16'
             NPM_VERSION: '>2.7.0'
 
-          # - NODE_VERSION: '14'
-          #   NPM_VERSION: '>2.7.0'
+          - NODE_VERSION: '14'
+            NPM_VERSION: '>2.7.0'
 
-          # - NODE_VERSION: '12'
-          #   NPM_VERSION: '>2.7.0'
+          - NODE_VERSION: '12'
+            NPM_VERSION: '>2.7.0'
 
           # - NODE_VERSION: '10'
           #   NPM_VERSION: '>2.7.0 <6.0.0'
