--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,7 @@ jobs:
   test:
 
     # Define a display name:
-    name: "${{ matrix.BUILD_TASK }}: NODE_VERSION=${{ matrix.NODE_VERSION }}, OS=${{ matrix.OS }}"
+    name: "NODE_VERSION=${{ matrix.NODE_VERSION }}, OS=${{ matrix.OS }}"
 
     # Define the type of virtual host machine on which to run the job:
     runs-on: ${{ matrix.OS }}
