--- a/.github/workflows/test_cov.yml
+++ b/.github/workflows/test_cov.yml
@@ -34,7 +34,7 @@ jobs:
   on-success:
 
     # Define a display name:
-    name: "${{ matrix.BUILD_TASK }}: NODE_VERSION=${{ matrix.NODE_VERSION }}, OS=${{ matrix.OS }}"
+    name: "NODE_VERSION=${{ matrix.NODE_VERSION }}, OS=${{ matrix.OS }}"
 
     # Define the type of virtual host machine on which to run the job:
     runs-on: ${{ matrix.OS }}
