Update list of workflow triggers

--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -27,7 +27,8 @@ on:
       - examples
       - test
       - test_cov
-      - test_npm_install
+      - test_npm_install_linux
+      - test_npm_install_macos
     types:
       - completed
 
