--- a/.github/workflows/linux_test.yml
+++ b/.github/workflows/linux_test.yml
@@ -17,7 +17,7 @@
 #/
 
 # Workflow name:
-name: test_macos
+name: linux_test
 
 # Workflow triggers:
 on:
@@ -28,7 +28,7 @@ on:
 # Workflow jobs:
 jobs:
 
-  # Define a workflow for running unit tests on macOS...
+  # Define a workflow for running unit tests on Linux...
   test:
 
     # Define a display name:
@@ -66,12 +66,12 @@ jobs:
         NODE_VERSION: ['16', '14', '12']
 
         # Define the list of operating systems on which to run this job:
-        OS: ['macOS-latest']
+        OS: ['ubuntu-latest']
 
         # Define configuration options for each Node.js version:
         include:
-          - OS: 'macOS-latest'
-            PLATFORM: 'macos'
+          - OS: 'ubuntu-latest'
+            PLATFORM: 'linux'
 
           - NODE_VERSION: '16'
             NPM_VERSION: '>2.7.0'
@@ -107,8 +107,22 @@ jobs:
       - name: 'Install compilers'
         shell: bash
         run: |
-          brew update
-          brew reinstall gcc
+          sudo -E apt-add-repository -y "ppa:ubuntu-toolchain-r/test"
+          sudo -E apt-get update -q
+          sudo -E apt-get -yq --no-install-suggests --no-install-recommends --allow-downgrades --allow-remove-essential --allow-change-held-packages install binutils gcc-9 gcc-9-multilib g++-9 g++-9-multilib gfortran-9 gfortran-9-multilib
+          mkdir -p $HOME/bin
+          echo "$HOME/bin" >> $GITHUB_PATH
+          ln -s /usr/bin/gcc-9 $HOME/bin/gcc
+          ln -s /usr/bin/g++-9 $HOME/bin/g++
+          ln -s /usr/bin/gfortran-9 $HOME/bin/gfortran
+        timeout-minutes: 10
+
+      # Configure a virtual display server (needed for electron):
+      - name: 'Configure virtual display server'
+        shell: bash
+        run: |
+          sudo apt-get install -y xvfb libxkbcommon-x11-0 libxcb-icccm4 libxcb-image0 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 libxcb-xinerama0 libxcb-xinput0 libxcb-xfixes0
+          sudo /usr/bin/Xvfb "${{ env.DISPLAY }}" -screen 0 1280x768x24 > /dev/null 2>&1 &
         timeout-minutes: 10
 
       # Install Node.js:
