--- a/.github/workflows/linux_examples.yml
+++ b/.github/workflows/linux_examples.yml
@@ -23,7 +23,7 @@ name: linux_examples
 on:
   workflow_run:
     workflows:
-      - test_linux
+      - linux_test
     types:
       - completed
 
