--- a/.github/workflows/linux_test_cov.yml
+++ b/.github/workflows/linux_test_cov.yml
@@ -17,25 +17,30 @@
 #/
 
 # Workflow name:
-name: macos_test_npm_install
+name: linux_test_cov
 
 # Workflow triggers:
 on:
-  push:
-    branches:
-      - develop
+  workflow_run:
+    workflows:
+      - linux_test
+    types:
+      - completed
 
 # Workflow jobs:
 jobs:
 
-  # Define a workflow for testing project installation on macOS...
-  test_npm_install:
+  # Define a workflow for determining test coverage on Linux...
+  on-success:
 
     # Define a display name:
     name: "NODE_VERSION=${{ matrix.NODE_VERSION }}"
 
     # Define the type of virtual host machine on which to run the job:
     runs-on: ${{ matrix.OS }}
+
+    # Ensure that this job only runs if the antecedent workflow is successful:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
     # Define environment variables:
     env:
@@ -59,18 +64,18 @@ jobs:
       matrix:
 
         # Define the list of build tasks:
-        BUILD_TASK: ['test-npm-install']
+        BUILD_TASK: ['test-coverage']
 
         # Define the list of Node.js versions on which to run this job:
-        NODE_VERSION: ['16', '14', '12', '10', '8', '6', '4', '0.12', '0.10']
+        NODE_VERSION: ['16', '14', '12']
 
         # Define the list of operating systems on which to run this job:
-        OS: ['macOS-latest']
+        OS: ['ubuntu-latest']
 
         # Define configuration options for each Node.js version:
         include:
-          - OS: 'macOS-latest'
-            PLATFORM: 'macos'
+          - OS: 'ubuntu-latest'
+            PLATFORM: 'linux'
 
           - NODE_VERSION: '16'
             NPM_VERSION: '>2.7.0'
@@ -81,23 +86,23 @@ jobs:
           - NODE_VERSION: '12'
             NPM_VERSION: '>2.7.0'
 
-          - NODE_VERSION: '10'
-            NPM_VERSION: '>2.7.0 <7.0.0'
+          # - NODE_VERSION: '10'
+          #   NPM_VERSION: '>2.7.0 <6.0.0'
 
-          - NODE_VERSION: '8'
-            NPM_VERSION: '>2.7.0 <6.0.0'
+          # - NODE_VERSION: '8'
+          #   NPM_VERSION: '>2.7.0 <6.0.0'
 
-          - NODE_VERSION: '6'
-            NPM_VERSION: '>2.7.0 <6.0.0'
+          # - NODE_VERSION: '6'
+          #   NPM_VERSION: '>2.7.0 <6.0.0'
 
-          - NODE_VERSION: '4'
-            NPM_VERSION: '>2.7.0 <6.0.0'
+          # - NODE_VERSION: '4'
+          #   NPM_VERSION: '>2.7.0 <6.0.0'
 
-          - NODE_VERSION: '0.12'
-            NPM_VERSION: '>2.7.0 <4.0.0'
+          # - NODE_VERSION: '0.12'
+          #   NPM_VERSION: '>2.7.0 <4.0.0'
 
-          - NODE_VERSION: '0.10'
-            NPM_VERSION: '>2.7.0 <4.0.0'
+          # - NODE_VERSION: '0.10'
+          #   NPM_VERSION: '>2.7.0 <4.0.0'
 
     # Define the sequence of job steps...
     steps:
@@ -106,8 +111,22 @@ jobs:
       - name: 'Install compilers'
         shell: bash
         run: |
-          brew update
-          brew reinstall gcc
+          sudo -E apt-add-repository -y "ppa:ubuntu-toolchain-r/test"
+          sudo -E apt-get update -q
+          sudo -E apt-get -yq --no-install-suggests --no-install-recommends --allow-downgrades --allow-remove-essential --allow-change-held-packages install binutils gcc-9 gcc-9-multilib g++-9 g++-9-multilib gfortran-9 gfortran-9-multilib
+          mkdir -p $HOME/bin
+          echo "$HOME/bin" >> $GITHUB_PATH
+          ln -s /usr/bin/gcc-9 $HOME/bin/gcc
+          ln -s /usr/bin/g++-9 $HOME/bin/g++
+          ln -s /usr/bin/gfortran-9 $HOME/bin/gfortran
+        timeout-minutes: 10
+
+      # Configure a virtual display server (needed for electron):
+      - name: 'Configure virtual display server'
+        shell: bash
+        run: |
+          sudo apt-get install -y xvfb libxkbcommon-x11-0 libxcb-icccm4 libxcb-image0 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 libxcb-xinerama0 libxcb-xinput0 libxcb-xfixes0
+          sudo /usr/bin/Xvfb "${{ env.DISPLAY }}" -screen 0 1280x768x24 > /dev/null 2>&1 &
         timeout-minutes: 10
 
       # Install Node.js:
@@ -167,6 +186,13 @@ jobs:
           # Specify whether to download Git-LFS files:
           lfs: false
         timeout-minutes: 10
+
+      # Perform install sequence (accounting for spurious installation errors, such as network timeouts, which can occasionally happen when running `npm install`):
+      - name: 'Perform install sequence'
+        shell: bash
+        run: |
+          make install || make install
+        timeout-minutes: 30
 
       # Run the build task:
       - name: 'Run build task'
