--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -39,7 +39,7 @@ on:
 jobs:
 
   # Define a workflow for sending notifications to Slack...
-  notify:
+  slack:
 
     # Define a display name:
     name: 'Slack notification'
