Add workflow to test package installation on Windows

--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -32,6 +32,7 @@ on:
       - macos_test
       - macos_test_cov
       - macos_test_npm_install
+      - windows_test_npm_install
     types:
       - completed
 
